# skimp

./: README.md  com.github.vhdirk.skimp.json  meson.build  pyproject.toml  run_skimp.py
data/: com.github.vhdirk.skimp.appdata.xml.in  com.github.vhdirk.skimp.desktop.in  com.github.vhdirk.skimp.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: __init__.py  application.py  constants.py  di.py  main.py  main_window.py  meson.build  skimp.gresource.xml  skimp.in
src/resources/: main.ui  skimp.gresource.xml
